@@ -832,7 +832,8 @@ show_usage(void)
            "  -A, --action ACTION       Specify a string as an action to perform on the\n"
            "                            image. In slideshow or multiwindow modes, the action\n"
            "                            will be run when the enter key is pressed, in list\n"
-           "                            mode, the action will be run for each file.\n"
+           "                            mode, or loadable|unloadable modes, the action will\n"
+           "                            be run for each file.\n"
            "                            The action will be executed by /bin/sh. Use\n"
            "                            format specifiers to refer to image info. See\n"
            "                            FORMAT SPECIFIERS for examples\n"
