@@ -1,3 +1,8 @@
+Tue Sep  4 23:47:42 2001  Tom Gilbert  <tom@linuxbrit.co.uk>
+
+	* --loadable and --unloadable modes should run --action on
+	matching files, fixed.
+
 Sun Aug 26 18:06:51 2001  Tom Gilbert  <tom@linuxbrit.co.uk>
 
 	* Slightly tweaked menu sliding behaviour.
